--- a/docs/dark-theme.css
+++ b/docs/dark-theme.css
@@ -1,6 +1,6 @@
 @media (prefers-color-scheme: dark) {
     body {
-    background-color: #000;
-    color: #fff;
+    background-color: #1e1e1e;
+    color: #ffffff;
     }
 }
