--- a/docs/deafult.css
+++ b/docs/deafult.css
@@ -10,13 +10,17 @@ body.dark {
     color: #fff;
 }
 
-body,h1,h2,h3,h4,h5,h6 {
-    font-family: "Raleway", sans-serif
+body,h1,h2,h3,h4,h5,h6,p {
+    font-family: "Raleway", sans-serif;
 }
 
 body, html {
     height: 100%;
     line-height: 1.8;
+}
+
+section{
+    padding:48px;
 }
 
 /* Full height image header */
@@ -38,6 +42,10 @@ body, html {
     border: none;
     background-color: transparent;
     cursor: pointer;
+    color:black;
+    font-weight: bold;
+    text-shadow: 2px 2px white;
+
 }
 
 /* Media query for small and medium screens */
