--- a/docs/deafult.css
+++ b/docs/deafult.css
@@ -14,6 +14,13 @@ body,h1,h2,h3,h4,h5,h6,p {
     font-family: "Raleway", sans-serif;
 }
 
+header {
+    background: url('asset/BTW1.jpg'); 
+    color: aliceblue;
+    text-shadow: 2px 2px black;
+    height: fit-content;
+}
+
 body, html {
     height: 100%;
     line-height: 1.8;
