--- a/docs/deafult.css
+++ b/docs/deafult.css
@@ -34,6 +34,11 @@ section{
     height: fit-content;
 }
 
+.crew-tag {
+    width: 100%;
+    height: auto;
+}
+
 .logo{
     width: 25px;
     height: auto;
