--- a/docs/deafult.css
+++ b/docs/deafult.css
@@ -122,3 +122,25 @@ section{
         margin-right: 10px; /* Add right margin for spacing between inline links */
     }
 }
+
+.featured-card img {
+    width: 100%;
+    transition: 0.3s;
+    border-radius: 8px;
+}
+
+.featured-card:hover img {
+    transform: scale(1.05);
+}
+
+.featured-card {
+    background-color: #fff;
+    border-radius: 8px;
+    padding: 12px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+
+.featured-card:hover {
+    box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+}
