--- a/docs/partials/nav.html
+++ b/docs/partials/nav.html
@@ -7,30 +7,30 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-MWQLLMSF');</script>
     <!-- End Google Tag Manager -->
-    <link rel="stylesheet" href="/assets/css/dark-theme.css" id="theme">
 </head>
 
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
-    <div class="w3-bar w3-card" id="myNavbar">
+    <div class="w3-bar" id="myNavbar">
         <a href="/index.html" class="w3-bar-item w3-button w3-wide">
             <img src="/asset/CWP_logo_static_edited_Transparant.png" alt="logo for CWP" class="logo"/>
         </a>
         <!-- Right-sided navbar links -->
         <div class="nav-links">
-            <a href="/pages/about_us.html" class="nav-link w3-bar-item">ABOUT US</a>
+            <a href="/pages/about_us.html" class="nav-link w3-bar-item">ABOUT</a>
             <div class="nav-links w3-bar-item w3-dropdown-hover" style="padding: 0px 0px 0px 0px">
-                <button class="nav-link w3-botton">OUR WORK</button>
+                <button class="nav-link w3-botton">OUR CREATIONS</button>
                 <div class="w3-dropdown-content w3-bar-block w3-border">
-                    <a href="/pages/pixelpals/" class="nav-link w3-bar-item w3-button">PIXEL PALS</a>
-                    <a href="/pages/frameforge/" class="nav-link w3-bar-item w3-button">FRAMEFORGE</a>
-                    <a href="/pages/cwp-studio/" class="nav-link w3-bar-item w3-button">CWP Studio</a>
+                    <a href="/pages/pixelpals/" class="nav-link w3-bar-item w3-button">LIVING PORTRAITS</a>
+                    <a href="/pages/frameforge/" class="nav-link w3-bar-item w3-button">ANIMATED HOMUNCULI</a>
+                    <a href="/pages/cwp-studio/" class="nav-link w3-bar-item w3-button">INTERACTIVE CONTRAPTIONS</a>
                 </div>
             </div>
-            <a href="/pages/meet_the_crew.html" class="nav-link w3-bar-item">TEAM :3</a>
+            <a href="/pages/meet_the_crew.html" class="nav-link w3-bar-item">THE ARTISANS</a>
             <a href="/pages/contact.html" class="nav-link w3-bar-item">CONTACT</a>
-            <a href="/pages/community.html" class="nav-link w3-bar-item">COMMUNITY</a>
-            <button id="theme-toggle-nav" class="nav-link w3-bar-item w3-botton" onclick="toggleTheme()">DARK</button>
+            <a href="/pages/community.html" class="nav-link w3-bar-item">THE GUILD</a>
+            <a href="/pages/the_aetherium.html" class="nav-link w3-bar-item">THE AETHERIUM</a>
+            <button id="theme-toggle-nav" class="nav-link w3-bar-item w3-botton" onclick="toggleTheme()">THEME</button>
         </div>
 
         <!-- Hide right-floated links on medium and large screens and replace them with a menu icon -->
@@ -41,20 +41,21 @@
 </div>
 
 <!-- Sidebar on small screens when clicking the menu icon -->
-<nav class="w3-sidebar w3-bar-block w3-gray w3-card w3-animate-left w3-hide-large" style="display:none" id="mySidebar">
+<nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-large" style="display:none" id="mySidebar">
     <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
-    <button id="theme-toggle-side" class="nav-link w3-bar-item" onclick="toggleTheme()">DARK</button>
+    <button id="theme-toggle-side" class="nav-link w3-bar-item" onclick="toggleTheme()">THEME</button>
     <a href="/index.html" onclick="w3_close()" class="nav-link w3-bar-item w3-button">HOME</a>
-    <a href="/pages/about_us.html" onclick="w3_close()" class="nav-link w3-bar-item w3-button">ABOUT US</a>
+    <a href="/pages/about_us.html" onclick="w3_close()" class="nav-link w3-bar-item w3-button">ABOUT</a>
     <div class="nav-links w3-bar-item w3-dropdown-hover" style="padding: 0px 0px 0px 0px">
-        <button class="nav-link w3-botton">OUR WORK <i class="fa fa-caret-down"></i></button>
+        <button class="nav-link w3-botton">OUR CREATIONS <i class="fa fa-caret-down"></i></button>
         <div class="w3-dropdown-content w3-bar-block w3-border">
-                <a href="/pages/pixelpals/" class="nav-link w3-bar-item w3-button">PIXEL PALS</a>
-                    <a href="/pages/frameforge/" class="nav-link w3-bar-item w3-button">FRAMEFORGE</a>
-                    <a href="/pages/cwp-studio/" class="nav-link w3-bar-item w3-button">CWP Studio</a>
+            <a href="/pages/pixelpals/" class="nav-link w3-bar-item w3-button">LIVING PORTRAITS</a>
+            <a href="/pages/frameforge/" class="nav-link w3-bar-item w3-button">ANIMATED HOMUNCULI</a>
+            <a href="/pages/cwp-studio/" class="nav-link w3-bar-item w3-button">INTERACTIVE CONTRAPTIONS</a>
         </div>
     </div>
-    <a href="/pages/meet_the_crew.html" class="nav-link w3-bar-item">TEAM :3</a>
-    <a href="/pages/community.html" onclick="w3_close()" class="nav-link w3-bar-item w3-button">COMMUNITY</a>
+    <a href="/pages/meet_the_crew.html" class="nav-link w3-bar-item">THE ARTISANS</a>
+    <a href="/pages/community.html" onclick="w3_close()" class="nav-link w3-bar-item w3-button">THE GUILD</a>
     <a href="/pages/contact.html" onclick="w3_close()" class="nav-link w3-bar-item w3-button">CONTACT</a>
+    <a href="/pages/the_aetherium.html" onclick="w3_close()" class="nav-link w3-bar-item w3-button">THE AETHERIUM</a>
 </nav>
