--- a/docs/partials/footer.html
+++ b/docs/partials/footer.html
@@ -8,46 +8,49 @@
     })(window,document,'script','dataLayer','GTM-MWQLLMSF');</script>
     <!-- End Google Tag Manager -->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
-    <link rel="stylesheet" href="/assets/css/dark-theme.css" id="theme">
 </head>
-<footer>
-    <div class="w3-container" id="myFooter" style="padding: 10px 10px 10px 10px">
-        <div class="w3-row">
-            <div class="w3-col l3 m12 s12 w3-center"> <!-- Adjust column size as needed -->
-                <img src="/asset/CWP_logo_static_edited_Transparant.png" alt="CWP LOGO" style="width: 125px">
-                <h3>ClockWorksProduction</h3>
-                <p>Here at CWP we aim to create and explore new way of enjoyable learning while having some fun along the way. <br>- ClockWork, 5/2025</p>
-            </div>
-            <div class="w3-col l9 m12 s12"> <!-- Adjust column size as needed -->
-                <div class="w3-col l9 m12 s12"> <!-- Adjust column size as needed -->
-                    <h4>Contact us</h4>
-                    <a href="mailto:clockworksproduction.stmain1@gmail.com">g-mail: clockworksproduction.stmain1@gmail.com</a><br>
-                    <p>p.s. It better to contact us via our discord server and/or our subreddit. adios :3c</p>
+<footer class="footer">
+    <div class="w3-row">
+        <div class="w3-col l4 m12 s12 footer-section">
+            <img src="/asset/CWP_logo_static_edited_Transparant.png" alt="CWP LOGO" style="width: 125px">
+            <h3>ClockWorksProduction</h3>
+            <p>"Here at CWP, we are architects of digital dreams, forging new realities from the crucible of imagination." - The Architect, 5/2025</p>
+        </div>
+        <div class="w3-col l8 m12 s12">
+            <div class="w3-row">
+                <div class="w3-col l4 m6 s12 footer-section">
+                    <h4>Navigate</h4>
+                    <a href="/index.html">Home</a>
+                    <a href="/pages/about_us.html">About</a>
+                    <a href="/pages/meet_the_crew.html">The Crew</a>
+                    <a href="/pages/contact.html">Contact</a>
+                    <a href="/pages/community.html">Community</a>
+                    <a href="/pages/void_impendium.html">Void Impendium</a>
                 </div>
-                <div class="w3-row"> <!-- Inner row for contact, community, etc. -->
-                    <div class="w3-col l4 m4 s12"> <!-- Adjust column size as needed -->
-                        <h6>Our Community</h6>
+                <div class="w3-col l4 m6 s12 footer-section">
+                    <h4>Our Work</h4>
+                    <a href="/pages/pixelpals/">Pixel Pals</a>
+                    <a href="/pages/frameforge/">FrameForge</a>
+                    <a href="/pages/cwp-studio/">CWP Studio</a>
+                </div>
+                 <div class="w3-col l4 m12 s12 footer-section">
+                    <h4>Connect</h4>
+                    <div class="social-icons">
                         <a href="https://www.reddit.com/r/ClockWorkProduction/" class="w3-bar-item w3-button"><img src="/assets/svgs/brands/reddit.svg" alt="Reddit icon" width="20"></a>
                         <a href="https://discord.gg/8Pspj3chzc" class="w3-bar-item w3-button"><img src="/assets/svgs/brands/discord.svg" alt="Discord icon" width="20"></a>
-                        <a href="https://www.youtube.com/@theknowledgezoneinternatio6948" class="w3-bar-item w3-button"><img src="/assets/svgs/brands/youtube.svg" alt="YouTube icon" width="20"></a>
-                        <a href="https://www.twitch.tv/agentblacktigerstreams" class="w3-bar-item w3-button"><img src="/assets/svgs/brands/twitch.svg" alt="Twitch icon" width="20"></a>
-                    </div>
-                    <div class="w3-col l4 m4 s12"> <!-- Adjust column size as needed -->
-                        <h6>Our Socials Media</h6>
                         <a href="https://github.com/ClockWorksProduction" class="w3-bar-item w3-button"><img src="/assets/svgs/brands/github.svg" alt="GitHub icon" width="20"></a>
-                        <a href="https://clockworks-production.itch.io/" class="w3-bar-item w3-button"><img src="/assets/svgs/brands/itch-io.svg" alt="itch.io icon" width="20"></a>
-                        <a href="https://www.furaffinity.net/user/clockworkproduction" class="w3-bar-item w3-button"><img src="/assets/svgs/solid/paw.svg" alt="Fur Affinity icon" width="20"></a>
-                        <a href="https://bsky.app/profile/clockworkteam.bsky.social" class="w3-bar-item w3-button"><img src="/assets/svgs/brands/bluesky.svg" alt="Bluesky icon" width="20"></a>
-                        <a href="https://x.com/ClockWorkP57131" class="w3-bar-item w3-button"><img src="/assets/svgs/brands/x-twitter.svg" alt="X (formerly Twitter) icon" width="20"></a>
-                        <a href="https://web.facebook.com/profile.php?id=61575382072883" class="w3-bar-item w3-button"><img src="/assets/svgs/brands/facebook.svg" alt="Facebook icon" width="20"></a>
+                        <a href="https://www.youtube.com/@theknowledgezoneinternatio6948" class="w3-bar-item w3-button"><img src="/assets/svgs/brands/youtube.svg" alt="YouTube icon" width="20"></a>
+                         <a href="https://www.twitch.tv/agentblacktigerstreams" class="w3-bar-item w3-button"><img src="/assets/svgs/brands/twitch.svg" alt="Twitch icon" width="20"></a>
                     </div>
-                    <div class="w3-col l4 m4 s12"> <!-- Adjust column size as needed -->
-                        <h6>Support us :3c</h6>
-                        <a href="https://ko-fi.com/clockworksproduction" class="w3-bar-item w3-button"><img src="/assets/svgs/solid/mug-hot.svg" alt="Ko-Fi icon" width="20"></a>
-                        <a href="https://ko-fi.com/clockworksproductionhttps://patreon.com/ClockWorksProduction?utm_medium=unknown&utm_source=join_link&utm_campaign=creatorshare_creator&utm_content=copyLink" class="w3-bar-item w3-button"><img src="/assets/svgs/brands/patreon.svg" alt="Patreon icon" width="20"></a>
-                    </div>
-                </div>
+                 </div>
             </div>
+             <div class="w3-row">
+                <div class="w3-col l12 m12 s12 footer-section">
+                     <h4>Support Us</h4>
+                     <a href="https://ko-fi.com/clockworksproduction"><i class="fas fa-mug-hot"></i> Buy us a coffee</a>
+                     <a href="https://patreon.com/ClockWorksProduction?utm_medium=unknown&utm_source=join_link&utm_campaign=creatorshare_creator&utm_content=copyLink"><i class="fab fa-patreon"></i> Support us on Patreon</a>
+                 </div>
+             </div>
         </div>
     </div>
 </footer>
